<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/total_market_capacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/total_market_cap"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/total_market_cap_value"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_orange_dark"
        tools:text="0" />

    <TextView
        android:text="@string/bitcoin_percent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bitcoin_percent"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bitcoin_percent_value"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_orange_dark"
        tools:text="0.0%" />

    <TextView
        android:text="@string/active_currencies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/active_currencies"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/active_currencies_value"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_orange_dark"
        tools:text="0" />

    <TextView
        android:text="@string/active_markets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/active_markets"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/active_markets_value"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_orange_dark"
        tools:text="0" />
</LinearLayout>